--- a/atv3/ex4/patinho.html
+++ b/atv3/ex4/patinho.html
@@ -13,13 +13,26 @@
       -webkit-user-select: none;
     }
 
-    .container{
-      position:relative;
-      width:800px;
-      height:600px;
+    .bg {
+      z-index: -999;
+      top:0;
+      left:0;
+      right:0;
+      bottom:0;
+      position: fixed;
+      width:100%;
+      height:100%;
+      padding-top: 4rem;
       background:#6BD0FC;
-      margin:90px auto;
       overflow:hidden;
+    }
+
+    .container{
+      width: 100%;
+      padding-left: 40%;
+      padding-top: 8%;
+      position: absolute;
+      transform: translate(-12rem, 0);
     }
     .sol{
       position:absolute;
@@ -197,17 +210,6 @@
       transform:rotate(-93deg)
     }
 
-    .bg{
-      overflow:hidden;
-      background:#b4ddf0;
-      position: absolute;
-      top:0;
-      left:0;
-      right:0;
-      bottom:0;
-      z-index: -999;
-    }
-
     .center {
       position: fixed;
       text-align: center;
@@ -221,6 +223,7 @@
     .title {
       font-size: 4rem;
       font-weight: 700;
+      color: #fff;
     }
 
     .round-input {
@@ -241,12 +244,24 @@
       background-color: #ccc;
       cursor: pointer;
     }
+
+    .box {
+      --tw-backdrop-blur: blur(8px);
+      backdrop-filter: blur(20px);
+      border-radius: 4rem;
+      padding: .1rem;
+      padding-left: 4rem;
+      padding-right: 4rem;
+      background-color: #00000080;
+    }
   </style>
 </head>
 <body>
   <form action="patinho.php" method="post" class="center">
-    <h1 class="title">Quantos patinhos foram passear?</h1>
-    <label for="x" style="font-weight: 700; font-size: larger;">Número</label>
+    <div class="box">
+      <h1 class="title">Quantos patinhos foram passear?</h1>
+    </div>
+    <label for="x" style="font-weight: 700; font-size: larger; color: #fff">Número</label>
     <input type="number" name="x" min="1" max="9999" value="5" class="round-input">
     <input type="submit" value="Gerar música" class="pretty-button">
   </form>
